--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,7 @@ button:global(.transparent) {
   outline: none;
   display: block;
 }
+
+:global(.fade-background) {
+  transition: background .1s linear;
+}
